fix - navigation on small screens

--- a/frontend/scss/global.scss
+++ b/frontend/scss/global.scss
@@ -94,6 +94,10 @@ h4.subtitle {
     font-size: 0.8em;
 }
 
+.navbar-dark > .navbar-toggler {
+    border: 0;
+}
+
 #about-page {
     h1, h2 {
         margin-top: 1em;
